@@ -1,5 +1,5 @@
 /* Portability cruft.  Include after config.h and sys/types.h.
-   Copyright (C) 1996, 1998 Free Software Foundation, Inc.
+   Copyright (C) 1996, 1998, 1999 Free Software Foundation, Inc.
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -107,6 +107,7 @@ extern char *sys_errlist[];
 #ifdef STDC_HEADERS
 # include <stdlib.h>
 #else
+char *getenv ();
 ptr_t malloc(), realloc(), calloc();
 void free();
 #endif
